2005-06-23  Andrew Belov  <andrew_belov@newmail.ru>

	*  3.10/2.78 rev. 22: tag "arj-3_10_22".

	*  arjtypes.c: YATF

2005-06-21  Andrew Belov  <andrew_belov@newmail.ru>

	*  arjsfx.c, arjtypes.c, environ.h, rearj.c, scrnio.c, arj.c,
	   arj_arcv.c, arj_file.c, arj_proc.c:
	   Merged with recent TCO release to migrate the timestamp code and
	   TAB handling fixes.

2005-06-18  Andrew Belov  <andrew_belov@newmail.ru>

	*  arj_proc.c: Removed the quiet_mode logic for arjdisp_enabled
	   (ARJDISP could operate on a separate terminal - no need to enforce
	   and/or change quiet_mode)

	*  integr.c: Mark an unreferenced variable as const, otherwise gcc
	   3.4 removes it - from Guillem Jover <guillem@debian.org>

2004-10-18  Andrew Belov  <andrew_belov@newmail.ru>

	*  arj_proc.c: test fix for using quiet_mode with ARJDISP

2004-06-18  Andrew Belov  <andrew_belov@newmail.ru>

	*  3.10/2.78 rev. 21: tag "arj-3_10_21".

	*  arj_arcv.c, arj_file.c, arj_proc.c, arj_user.c, arjtypes.c,
	   environ.c, externs.c, externs.h, makefile:
	   Merged with the remaining part of TCO fixes to make up for 3.10.21

2004-05-31  Andrew Belov  <andrew_belov@newmail.ru>

	*  defines.h, encode.c, environ.c, environ.h, fmemcmp.asm, misc.c,
	   rearj.c: Resync with TCO to close any outstanding bugs

2004-05-01  Andrew Belov  <andrew_belov@newmail.ru>

	*  arj.c: Rudimentary Borland code caused the filenames in argv[] to
	   be mishandled under Win32

2004-04-21  Andrew Belov  <andrew_belov@newmail.ru>

	*  register.c: REGISTER might fail due to _fput_* changes

2004-04-17  Andrew Belov  <andrew_belov@newmail.ru>

	*  3.10/2.78 rev. 20: tag "arj-3_10_20".

	*  environ.c: Cleaned up the DOS wildcard code

	*  arjdata.c:
	   The gamma cycle is now over, removing gamma version markers

	*  arjsfxjr.c, arjtypes.c, ea_mgr.c, encode.c, environ.c, fardata.c,
           gost_t.c, misc.c, msgbind.c, packager.c, rearj.c, uxspec.c, arj.c,
           arj_arcv.c, arj_file.c, arj_user.c, arjsec_l.c: